--- a/index.html
+++ b/index.html
@@ -1,82 +1,197 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Explore Together | Science Fosen</title>
     <meta
-    name="description"
-    content="The aim of our museum is to create a space where everyone can experience the wonders of our discoveries and perhaps even ignite a lifelong passion to continue the exploration of the world around us."
-  />
-  <link rel="stylesheet" href="src/css/styles.css" />
-  <link rel="stylesheet" href="src/css/index.css" />
-  <link rel="stylesheet" href="src/css/media.css" />
-</head>
-<body>
+      name="description"
+      content="Embark on a journey of discovery at our science museum. Engage with interactive exhibits, join clubs, and collaborate with researchers. Uncover the wonders of science today!"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="images/favicons/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="images/favicons/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="images/favicons/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Victor+Mono:wght@100;200;300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="src/css/styles.css" />
+    <link rel="stylesheet" href="src/css/index.css" />
+    <link rel="stylesheet" href="src/css/media.css" />
+  </head>
+  <body>
     <header>
-        <a href="index.html"><img src="images/science-fosen-logo-green.svg" alt="Logo of Science Fosen" class="logo"/></a>
-        <nav>
-            <a href="">Visit</a>
-            <a href="">Exhibitions</a>
-            <a href="">Explore</a>
-            <a href="">Get Involved</a>
-            <a href="">Contact</a>
-        </nav>
-        <div>
-            <img src="images/mingcute_search-line.svg" />
+      <a href="index.html"
+        ><img
+          src="images/science-fosen-logo-green.svg"
+          alt="Logo of Science Fosen"
+          class="logo"
+      /></a>
+      <div class="header">
+        <div class="search">
+          <img src="images/mingcute_search-line.svg" />
         </div>
-        <a href="visit.html" class="cta">Buy ticket</a>
+        <a href="visit.html" class="cta ticket">Buy ticket</a>
+        <div class="menu">
+          <input type="checkbox" id="menu-checkbox" />
+          <label id="menu-label" for="menu-checkbox"></label>
+          <nav class="l-font">
+            <a href="visit.html">Visit</a>
+            <a href="exhibitions.html">Exhibitions</a>
+            <a href="explore.html">Explore</a>
+            <a href="get-involved.html">Get Involved</a>
+            <a href="contact.html">Contact</a>
+          </nav>
+        </div>
+      </div>
     </header>
-    <main>
-        <div class="banner"></div>
-        <section class="info">
-            <div>
-                <h3>Hours</h3>
-                <ul>
-                    <li>Monday: Closed</li>
-                    <li>Tuesday: 10:00 – 16:00</li>
-                    <li>Wednesday: 10:00 – 16:00</li>
-                    <li>Thursday: 10:00 – 16:00</li>
-                    <li>Friday: 10:00 – 19:00</li>
-                    <li>Saturday: 9:00 – 16:00</li>
-                    <li>Sunday: 9:00 – 13:00</li>
-                </ul>
-                <a href="visit.html" class="cta">More info</a>
-            </div>
-            <div>
-                <h3>Location</h3>
-                <p>Fosenveien 3, 7090 FOSEN</p>
-                <div>
-                    <img src="" />
-                </div>
-            </div>
-        </section>
-        <section>
-            <h2>Special Events and Exhibitions</h2>
-            <div class="events">
-                <div class="events--professor">
-                    <div>
-                        <h3>Visiting Professor of Aeronautics</h3>
-                        <p>It is our pleasure to announce that Prof Sheila Widnall from the Massachusetts Institute of Technology will be delivering 3 lectures on the development of aeronautics and where the future lies in this exciting ‘space’.</p>
-                    </div>
-                    <div>
-                        <img src="images/andrew-ruiz-348421.jpg" />
-                    </div>
-                </div>
-                <div class="events--energetica">
-                    <h3>Energetica Exhibition on Loan</h3>
-                    <p>On loan from the NEMO Science Museum in Amsterdam, the Energetica exhibition is coming to the Community Science Museum. It’s a series of installations that allow visitors to experience the power of the elements as we harness them. From solar energy powering lighting, to ‘Wind Island’ that shows how turbines are able to use and control wind to create power.</p>
-                </div>
-                <div class="events--night">
-                    <h3>Night in the Museum</h3>
-                    <p>Get your family together for an exciting night in the museum as you sleep over beside dinosaurs and science displays. Bring your own sleeping bag and get ready to rough it as we go exploring the wonders of science.</p>
-                </div>
-            </div>
-        </section>
+    <main class="index">
+      <section class="banner main-banner">
+        <p class="s-heading bold">
+          Come join us at Science Fosen where we’re committed to making science
+          accessible to all.
+        </p>
+        <h1>Explore Together</h1>
+      </section>
+      <section class="info s-heading">
+        <div class="info--hours">
+          <h3 class="s-heading">Hours</h3>
+          <ul>
+            <li>Monday: Closed</li>
+            <li>Tuesday: 10:00 – 16:00</li>
+            <li>Wednesday: 10:00 – 16:00</li>
+            <li>Thursday: 10:00 – 16:00</li>
+            <li>Friday: 10:00 – 19:00</li>
+            <li>Saturday: 9:00 – 16:00</li>
+            <li>Sunday: 9:00 – 13:00</li>
+          </ul>
+          <a href="visit.html" class="cta">More info</a>
+        </div>
+        <div class="info--location">
+          <div>
+            <h3 class="s-heading">Location</h3>
+            <p>Fosenveien 3, 7090 FOSEN</p>
+          </div>
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3020.031995025742!2d10.069570337102988!3d63.762052570386125!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sno!4v1703006346444!5m2!1sen!2sno"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
+        </div>
+      </section>
+      <section class="events">
+        <h2 class="m-heading">Special Events and Exhibitions</h2>
+        <div class="events--container">
+          <div>
+            <h3 class="s-heading bold"></h3>
+            <p class="s-heading"></p>
+          </div>
+          <div>
+            <div class="events-img"></div>
+          </div>
+        </div>
+      </section>
+      <section class="carousel s-heading">
+        <div class="carousel-img">
+          <div class="cosmology">
+            <h3>Cosmology</h3>
+            <a href="exhibitions.html" class="cta">Virtual tour</a>
+          </div>
+        </div>
+        <div class="carousel-img">
+          <div class="evolution">
+            <h3>Evolution</h3>
+            <a href="exhibitions.html" class="cta">Virtual tour</a>
+          </div>
+        </div>
+        <div class="carousel-img">
+          <div class="biology">
+            <h3>Biology and Medicine</h3>
+            <a href="exhibitions.html" class="cta">Virtual tour</a>
+          </div>
+        </div>
+        <div class="carousel-img">
+          <div class="robotics">
+            <h3>Robotics and AI</h3>
+            <a href="exhibitions.html" class="cta">Virtual tour</a>
+          </div>
+        </div>
+        <div class="carousel-img">
+          <div class="ecology">
+            <h3>Ecology</h3>
+            <a href="exhibitions.html" class="cta">Virtual tour</a>
+          </div>
+        </div>
+      </section>
+      <section class="img-buttons">
+        <div class="img-buttons--item1">
+          <a href="exhibitions.html" class="img-buttons--item1--img">
+            <h3>Virtual tour</h3>
+          </a>
+        </div>
+        <div class="img-buttons--item2">
+          <a href="explore.html" class="img-buttons--item2--img">
+            <h3>What to do</h3>
+          </a>
+        </div>
+        <div class="img-buttons--item3">
+          <a href="get-involved.html" class="img-buttons--item3--img">
+            <h3>Join us</h3>
+          </a>
+        </div>
+      </section>
     </main>
     <footer>
-
+      <div class="footer-1 l-font">
+        <div class="footer-menu1">
+          <a href="privacy-policy.html">Privacy Policy</a>
+          <a href="terms-and-conditions.html">Terms & Conditions</a
+          >
+        </div>
+      </div>
+      <div class="footer-2 l-font">
+        <div class="footer-menu2">
+          <a href="contact.html">Contact</a>
+          <a href="get-involved.html">Contribute</a>
+        </div>
+      </div>
+      <div class="footer">
+        <div class="socials">
+          <img src="./images/facebook.svg" />
+          <img src="./images/instagram.svg" />
+          <img src="./images/tiktok.svg" />
+        </div>
+        <div>
+          <img src="./images/science-fosen-meta-logo.svg" alt="Alternate logo of Science Fosen" class="footer-logo" />
+        </div>
+        <p class="s-font">©Science Fosen 2023</p>
+      </div>
     </footer>
-</body>
+  </body>
 </html>
