--- a/visit.html
+++ b/visit.html
@@ -97,7 +97,7 @@
         </section>
         <div class="about-img">
           <img
-            src="../../images/library-1132573_1920.jpg"
+            src="././images/library-1132573_1920.jpg"
             alt="Inside the Science Fosen museum"
           />
         </div>
