--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
       /></a>
       <div class="header">
         <div class="search">
-          <img src="images/mingcute_search-line.svg" />
+          <img src="images/mingcute_search-line.svg" alt="Search"/>
         </div>
         <a href="visit.html" class="cta ticket">Buy ticket</a>
         <div class="menu">
@@ -106,7 +106,7 @@
           </p>
           <p>You may as well feel free to use the contact form below:</p>
         </section>
-        <section class="contact--info l-font">
+        <div class="contact--info l-font">
           <div class="contact--info-content">
             <div class="contact--info-content1">
               <div>
@@ -129,7 +129,7 @@
               </div>
             </div>
           </div>
-        </section>
+        </div>
         <form>
           <div class="fields">
             <fieldset>
@@ -151,6 +151,7 @@
                 class="m-font"
                 name="email"
                 placeholder="Email"
+                aria-labelledby="email"
                 required
               />
               <label for="email" class="contact-label">Email</label>
@@ -162,6 +163,7 @@
                 class="m-font"
                 name="topic"
                 placeholder="Topic"
+                aria-labelledby="topic"
                 required
               />
               <label for="topic" class="contact-label">Topic</label>
@@ -172,6 +174,7 @@
                 class="m-font"
                 name="inquiry"
                 placeholder="Inquiry"
+                aria-labelledby="inquiry"
                 required
               ></textarea>
               <label for="inquiry" class="contact-label">Inquiry</label>
@@ -198,9 +201,9 @@
       </div>
       <div class="footer">
         <div class="socials">
-          <img src="./images/facebook.svg" />
-          <img src="./images/instagram.svg" />
-          <img src="./images/tiktok.svg" />
+          <img src="./images/facebook.svg" alt="Facebook" />
+          <img src="./images/instagram.svg" alt="Instagram" />
+          <img src="./images/tiktok.svg" alt="TikTok" />
         </div>
         <div>
           <img
