--- a/exhibitions.html
+++ b/exhibitions.html
@@ -52,7 +52,7 @@
       /></a>
       <div class="header">
         <div class="search">
-          <img src="images/mingcute_search-line.svg" />
+          <img src="images/mingcute_search-line.svg" alt="Search"/>
         </div>
         <a href="visit.html" class="cta ticket">Buy ticket</a>
         <div class="menu">
@@ -194,9 +194,9 @@
       </div>
       <div class="footer">
         <div class="socials">
-          <img src="./images/facebook.svg" />
-          <img src="./images/instagram.svg" />
-          <img src="./images/tiktok.svg" />
+          <img src="./images/facebook.svg" alt="Facebook" />
+          <img src="./images/instagram.svg" alt="Instagram" />
+          <img src="./images/tiktok.svg" alt="TikTok" />
         </div>
         <div>
           <img src="./images/science-fosen-meta-logo.svg" alt="Alternate logo of Science Fosen" class="footer-logo" />
