--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -52,7 +52,7 @@
       /></a>
       <div class="header">
         <div class="search">
-          <img src="images/mingcute_search-line.svg" />
+          <img src="images/mingcute_search-line.svg" alt="Search"/>
         </div>
         <a href="visit.html" class="cta ticket">Buy ticket</a>
         <div class="menu">
@@ -74,8 +74,8 @@
         <p class="s-heading italic">Last Updated: 27.11.2023</p>
       </div>
       <div>
-        <h2>Introduction</h2>
-        <p>
+        <h2 class="s-heading">Introduction</h2>
+        <p class="l-font">
           Welcome to Science Fosen, a community science museum located in
           Råkvåg, Norway. Our website is dedicated to providing information
           about our museum, including exhibits, events, and educational
@@ -84,15 +84,15 @@
         </p>
       </div>
       <div>
-        <h2>Scope</h2>
-        <p>
+        <h2 class="s-heading">Scope</h2>
+        <p class="l-font">
           This policy applies to all visitors of our website and covers how we
           collect, use, and safeguard any information obtained.
         </p>
       </div>
       <div>
-        <h2>Information we do not collect</h2>
-        <ul>
+        <h2 class="s-heading">Information we do not collect</h2>
+        <ul class="l-font">
           <li>
             <span class="bold">Cookies:</span> Our website does not use cookies
             or similar tracking technologies.
@@ -110,8 +110,8 @@
         </ul>
       </div>
       <div>
-        <h2>Information we collect</h2>
-        <ul>
+        <h2 class="s-heading">Information we collect</h2>
+        <ul class="l-font">
           <li>
             <span class="bold">Voluntary Information:</span> Visitors may choose
             to contact us via email or phone for inquiries. In such cases, we
@@ -125,12 +125,12 @@
         </ul>
       </div>
       <div>
-        <h2>Use of information</h2>
-        <p>
+        <h2 class="s-heading">Use of information</h2>
+        <p class="l-font">
           The limited information we collect is used solely for the following
           purposes:
         </p>
-        <ul>
+        <ul class="l-font">
           <li>Responding to inquiries.</li>
           <li>
             Improving our website and services. Ensuring the security of our
@@ -139,44 +139,44 @@
         </ul>
       </div>
       <div>
-        <h2>Data security</h2>
-        <p>
+        <h2 class="s-heading">Data security</h2>
+        <p class="l-font">
           We are committed to ensuring the security of our website and protect
           against unauthorized access, alteration, disclosure, or destruction of
           information.
         </p>
       </div>
       <div>
-        <h2>Third-party links</h2>
-        <p>
+        <h2 class="s-heading">Third-party links</h2>
+        <p class="l-font">
           Our website may contain links to third-party sites. We are not
           responsible for the privacy practices of these external sites.
         </p>
       </div>
       <div>
-        <h2>Children's Privacy</h2>
-        <p>
+        <h2 class="s-heading">Children's Privacy</h2>
+        <p class="l-font">
           Our website is designed for a general audience and does not knowingly
           collect information from children under the age of 16.
         </p>
       </div>
       <div>
-        <h2>Changes to Our Privacy Policy</h2>
-        <p>
+        <h2 class="s-heading">Changes to Our Privacy Policy</h2>
+        <p class="l-font">
           We may update this policy periodically. Any changes will be posted on
           this page with an updated revision date.
         </p>
       </div>
       <div>
-        <h2>Contact Us</h2>
-        <p>
+        <h2 class="s-heading">Contact Us</h2>
+        <p class="l-font">
           For any questions or concerns about our privacy policy, please contact
           us at science@fosen.com.
         </p>
       </div>
       <div>
-        <h2>Governing Law</h2>
-        <p>This privacy policy is governed by Norwegian law.</p>
+        <h2 class="s-heading">Governing Law</h2>
+        <p class="l-font">This privacy policy is governed by Norwegian law.</p>
       </div>
     </main>
     <footer>
@@ -195,9 +195,9 @@
       </div>
       <div class="footer">
         <div class="socials">
-          <img src="./images/facebook.svg" />
-          <img src="./images/instagram.svg" />
-          <img src="./images/tiktok.svg" />
+          <img src="./images/facebook.svg" alt="Facebook" />
+          <img src="./images/instagram.svg" alt="Instagram" />
+          <img src="./images/tiktok.svg" alt="TikTok" />
         </div>
         <div>
           <img src="./images/science-fosen-meta-logo.svg" alt="Alternate logo of Science Fosen" class="footer-logo" />
