--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -52,7 +52,7 @@
       /></a>
       <div class="header">
         <div class="search">
-          <img src="images/mingcute_search-line.svg" />
+          <img src="images/mingcute_search-line.svg" alt="Search"/>
         </div>
         <a href="visit.html" class="cta ticket">Buy ticket</a>
         <div class="menu">
@@ -74,23 +74,23 @@
         <p class="s-heading italic">Last Updated: 27.11.2023</p>
       </div>
       <div>
-        <h2>Introduction</h2>
-        <p>
+        <h2 class="s-heading">Introduction</h2>
+        <p class="l-font">
           Welcome to the Science Fosen website. By accessing our website, you
           agree to these terms and conditions. Please read them carefully.
         </p>
       </div>
       <div>
-        <h2>Acceptance of Terms</h2>
-        <p>
+        <h2 class="s-heading">Acceptance of Terms</h2>
+        <p class="l-font">
           Your access to and use of our website is conditioned upon your
           acceptance of and compliance with these Terms. If you disagree with
           any part of the terms, you may not access the website.
         </p>
       </div>
       <div>
-        <h2>Use of Website</h2>
-        <ul>
+        <h2 class="s-heading">Use of Website</h2>
+        <ul class="l-font">
           <li>
             <span class="bold">Permitted Use:</span> The website is intended to provide information about
             our museum, its exhibits, events, and educational resources. Any use
@@ -111,8 +111,8 @@
         </ul>
       </div>
       <div>
-        <h2>Content</h2>
-        <ul>
+        <h2 class="s-heading">Content</h2>
+        <ul class="l-font">
           <li>
             <span class="bold">Accuracy:</span> We endeavour to ensure that the information on our website
             is accurate and up-to-date, but we cannot guarantee its complete
@@ -124,8 +124,8 @@
         </ul>
       </div>
       <div>
-        <h2>Links to Other Websites</h2>
-        <p>
+        <h2 class="s-heading">Links to Other Websites</h2>
+        <p class="l-font">
           Our website may contain links to third-party websites or services that
           are not owned or controlled by Science Fosen. We have no control over,
           and assume no responsibility for, the content, privacy policies, or
@@ -133,16 +133,16 @@
         </p>
       </div>
       <div>
-        <h2>Limitation of Liability</h2>
-        <p>
+        <h2 class="s-heading">Limitation of Liability</h2>
+        <p class="l-font">
           Science Fosen will not be liable for any damages of any kind arising
           from the use of this website, including, but not limited to direct,
           indirect, incidental, punitive, and consequential damages.
         </p>
       </div>
       <div>
-        <h2>Indemnification</h2>
-        <p>
+        <h2 class="s-heading">Indemnification</h2>
+        <p class="l-font">
           You agree to indemnify, defend, and hold harmless Science Fosen, its
           officers, directors, employees, agents, and suppliers from any claim,
           demand, damages, or other losses, including reasonable attorneys'
@@ -151,8 +151,8 @@
         </p>
       </div>
       <div>
-        <h2>Applicable Law</h2>
-        <p>
+        <h2 class="s-heading">Applicable Law</h2>
+        <p class="l-font">
           By visiting our website, you agree that the laws of Norway, without
           regard to principles of conflict of laws, will govern these Terms and
           any dispute of any sort that might arise between you and Science
@@ -160,8 +160,8 @@
         </p>
       </div>
       <div>
-        <h2>Changes to Terms and Conditions</h2>
-        <p>
+        <h2 class="s-heading">Changes to Terms and Conditions</h2>
+        <p class="l-font">
           We reserve the right to make changes to our website, policies, and
           these Terms at any time. If any of these conditions shall be deemed
           invalid, void, or for any reason unenforceable, that condition shall
@@ -170,8 +170,8 @@
         </p>
       </div>
       <div>
-        <h2>Contact Information</h2>
-        <p>
+        <h2 class="s-heading">Contact Information</h2>
+        <p class="l-font">
           For any questions regarding these Terms, please contact us at
           science@fosen.com.
         </p>
@@ -193,9 +193,9 @@
       </div>
       <div class="footer">
         <div class="socials">
-          <img src="./images/facebook.svg" />
-          <img src="./images/instagram.svg" />
-          <img src="./images/tiktok.svg" />
+          <img src="./images/facebook.svg" alt="Facebook" />
+          <img src="./images/instagram.svg" alt="Instagram" />
+          <img src="./images/tiktok.svg" alt="TikTok" />
         </div>
         <div>
           <img src="./images/science-fosen-meta-logo.svg" alt="Alternate logo of Science Fosen" class="footer-logo" />
