--- a/visit.html
+++ b/visit.html
@@ -52,7 +52,7 @@
       /></a>
       <div class="header">
         <div class="search">
-          <img src="images/mingcute_search-line.svg" />
+          <img src="images/mingcute_search-line.svg" alt="Search"/>
         </div>
         <a href="visit.html" class="cta ticket">Buy ticket</a>
         <div class="menu">
